removed vs from docs/requirements.txt

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,15 +1,14 @@
 sphinx_rtd_theme
-Fiona==1.9.1
-geopandas==0.13.2
-httpx==0.24.1
-importlib_resources==6.0.1
-matplotlib==3.7.1
-numpy==1.25.1
-pandas==2.0.3
-python_Levenshtein==0.21.1
-python_Levenshtein==0.21.1
-pyvis==0.3.1
-scipy==1.11.2
-setuptools==68.0.0
-Shapely==2.0.1
-thefuzz==0.19.0
+Fiona
+geopandas
+httpx
+importlib_resources
+matplotlib
+numpy
+pandas
+python_Levenshtein
+pyvis
+scipy
+setuptools
+Shapely
+thefuzz
