--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,11 +1,11 @@
-# version: 0.1
-
 build:
   tools:
     python: "3.11"
 
 sphinx:
   configuration: docs/conf.py
+
+formats: all
 
 python:
   install:
