--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,11 +1,17 @@
+version: "0.1.0"
+
 build:
+  os: ubuntu-22.04
   tools:
     python: "3.11"
 
 sphinx:
   configuration: docs/conf.py
 
-formats: all
+formats:
+  - htmlzip
+  - epub
+  - pdf
 
 python:
   install:
