--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "censaurus"
-version = "0.1.dev2"
+version = "0.1.1"
 dynamic = ["dependencies"]
 authors = [
   {name="Ethan Singer", email="singerep@bu.edu"},
